# DORA_explorer

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
mab/: bandit_env.py  evaluation.py  prompts.py  requirements.txt  run.py  score.py
mab/agents/: __init__.py  baselines.py  dora_lambda_schedule.py  llm.py  scheduled_temp.py
tale-suite/: MANIFEST.in  README.md  benchmark.py  pyproject.toml  requirements.txt
tale-suite/agents/: dora_auto_explore.py  dora_lambda_schedule.py  dora_schedule.py  human.py  llm.py  llm_cot.py  llm_prompt_explore.py  llm_tot.py  llm_walkthrough.py  random.py  react_canonical.py  reasoning.py  scheduled_temp_llm.py  walkthrough.py
tale-suite/tales/: __init__.py  agent.py  config.py  download.py  logger.py  scoring_token_usage.py  token.py  utils.py
tale-suite/tales/alfworld/: __init__.py  alfworld_data.py  alfworld_env.py
tale-suite/tales/jericho/: __init__.py  games.json  jericho_data.py  jericho_env.py
tale-suite/tales/scienceworld/: __init__.py  scienceworld_data.py  scienceworld_env.py
tale-suite/tales/textworld/: __init__.py  textworld_data.py  textworld_env.py
tale-suite/tales/textworld_express/: __init__.py  twx_data.py  twx_env.py
