[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dora-paper-code"
version = "0.1.0"
description = "DORA / directed exploration: Bernoulli MAB + TALE-Suite agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26.0",
  "matplotlib>=3.9.0",
  "pandas>=2.0.0",
  "torch>=2.0.0",
  "transformers>=4.40.0",
  "accelerate>=0.26.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://dora-explore.github.io/"
Repository = "https://github.com/sparklabutah/DORA_explorer"

[tool.setuptools.packages.find]
where = ["."]
include = ["mab", "mab.*"]
